--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,25 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "customManagers": [
+            {
+                "customType": "regex",
+                "managerFilePatterns": [
+                    "/^Dockerfile/"
+                ],
+                "matchStrings": [
+                    "#\\s*renovate-debian:\\s*?(suite=(?<suite>.*?))?\\s*depName=(?<depName>.*?)?\\sARG .*_VERSION=\"(?<currentValue>.*)\""
+                ],
+                "registryUrlTemplate": "https://deb.debian.org/debian?suite={{#if suite }}{{suite}}{{else}}stable{{/if}}&components=main,contrib,non-free&binaryArch=amd64",
+                "datasourceTemplate": "deb"
+            }
+        ],
     "packageRules": [
         {
             "matchDatasources": ["docker"],
             "matchPackageNames": ["debian", "ubuntu"],
             "matchUpdateTypes": ["digest"],
             "automerge": true,
-            "automergeType": "branch" 
+            "automergeType": "branch"
         }
     ],
     "assignees": [
